# chart-generator

./: .check-bound.ts  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: desktop.yml
docs/plans/: 2026-07-16-swiss-ephemeris-swap.md  2026-07-16-tauri-desktop.md  2026-07-17-features-guide.md
scripts/: build-cities.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ChartLibrary.tsx  ImportDialog.tsx  Modal.tsx  OptionsPanel.tsx  VaultActions.tsx
src/components/chart/: Chart.tsx  MiniWheel.tsx
src/components/chart/components/: Aspects.tsx  Houses.tsx  Planets.tsx  Ticks.tsx  Zodiac.tsx
src/components/sidePanel/: SidePanel.tsx
src/components/sidePanel/components/: AspectToggles.tsx  CastForm.tsx  PlanetList.tsx  SavedCharts.tsx  SelectedCard.tsx  VaultActions.tsx  WindTheClock.tsx
src/engine/: almanac.ts  assembly.ts  ephemeris.d.ts  ephemeris.js  swiss.ts
src/hooks/: useTween.ts
src/lib/: aaf.ts  chartVault.ts  scrubTime.ts  wheelImage.tsx
src/types/: index.ts
