[package]
name = "natal-chart"
version = "0.1.0"
description = "Natal chart generator"
license = "AGPL-3.0-only"
edition = "2021"

# the lib name must differ from the binary so `tauri build` links cleanly
[lib]
name = "natal_chart_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-window-state = "2"
tauri-plugin-store = "2"
